10.blog/5.isso.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isso
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: isso
  template:
    metadata:
      labels:
        app: isso
    spec:
      containers:
      - name: isso
        image: ghcr.io/isso-comments/isso:0.13.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: isso-config
          mountPath: /config/isso.cfg
          subPath: isso.cfg
        - name: isso-db
          mountPath: /db
      volumes:
      - name: isso-config
        configMap:
          name: isso-config
      - name: isso-db
        persistentVolumeClaim:
          claimName: isso-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: isso-service
  namespace: ghost
spec:
  selector:
    app: isso
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
