10.blog/6.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commento-ingress
  namespace: ghost
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - comments.dogring.kr
    secretName: comments-dogring-cert
  rules:
    - host: comments.dogring.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: isso-service
                port:
                  number: 80
